feat: finalizando a parte do médico